--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>SPACE X Landing Interface </title>
+		<title>SPACE X EARTH Interface </title>
 		<link rel="stylesheet" type="text/css" href="styles/mystyle.css">
 		<script src="scripts/main.js" defer></script>
 	</head>
@@ -21,14 +21,14 @@
 	 
 	 <body onload="earthClock()">
 	 <div id="time"></div>
-	 <h1> EARTH WEATHER CONDITIONS </h1>
+	 <h1> EARTH'S WEATHER CONDITIONS </h1>
 	 <div class="input">
 	  <input type="text" class="inputValue" placeholder="Enter A City">
 	  <input type="submit" value="submit" class="button">
 	  </div> 
 	  <div class="display">
 	  <h1 class="name"> </h1> 
-	  <p class ="desc"></p>
+	  <p class ="desc" ></p>
 	  <p class="temp"></p>
 	  </div>
 	  </body>
