--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	 <head>
+	<head>
 		<meta charset="utf-8">
 		<title>SPACE X EARTH Interface </title>
 		<script src="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js"></script>
@@ -10,13 +10,9 @@
 		
 		<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.2/mapbox-gl-geocoder.min.js"></script>
         <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.2/mapbox-gl-geocoder.css" />
-	 </head>
+	</head>
 	
-	 
-	 <body>
-	    <div id="container"></div>
-	      <h1> EARTH'S WEATHER CONDITIONS </h1>
-	    
+	<body>
 		<div class="input">
 	      <input type="text" class="inputValue" placeholder="Enter A City">
 	      <input type="submit" value="submit" class="button">
@@ -26,9 +22,8 @@
 	      <h1 class="name"> </h1> 
 	        <p class ="desc" ></p>
 	        <p class="temp"></p>
-	    </div>
-	 </body>
-	 
-	 <div id="map"></div>
-		
+			
+	    </div><div id="map"> </div>
+		<div id="geocoder"> </div>
+	</body>
 </html>
